builder-derive/tests/builder/unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> tests/builder/unrecognized-attribute.rs:13:7
   |
13 |     #[builder(eac = "location")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
